--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "knex:migrate": "knex migrate:latest"
+    "knex:migrate": "knex migrate:latest",
+    "knex:rollback": "knex migrate:down"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
   "dependencies": {
     "ajv": "^8.6.3",
     "ajv-formats": "^2.1.1",
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "knex": "^0.95.11",
     "pg": "^8.7.1"
