--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "ajv": "^8.6.3",
     "ajv-formats": "^2.1.1",
     "bcrypt": "^5.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "pg": "^8.7.1"
   },
