--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "server_test_maddis",
   "version": "1.0.0",
-  "description": "",
+  "description": "<p align=\"center\">   <a href=\"https://github.com/Ze-Victor/Server_Test_Maddis/blob/master/README-en.md\">English</a>&nbsp;&nbsp;&nbsp;•&nbsp;&nbsp;   <a href=\"https://github.com/Ze-Victor/Server_Test_Maddis/blob/master/README.md\">Português (Brasil)</a> </p> <hr>",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
@@ -16,6 +16,7 @@
     "ajv": "^8.6.3",
     "ajv-formats": "^2.1.1",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -24,5 +25,13 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ze-Victor/Server_Test_Maddis.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ze-Victor/Server_Test_Maddis/issues"
+  },
+  "homepage": "https://github.com/Ze-Victor/Server_Test_Maddis#readme"
 }
