--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
+    "multer": "^1.4.3",
     "pg": "^8.7.1"
   },
   "devDependencies": {
